@@ -55,7 +55,7 @@ public class RepeatTimesLiteralExecution extends AbstractQuestionFinder {
                 super.visit(node);
 
                 if (node.getStmtList().hasStatements() && !hasStop) {
-                    ASTNode stmt = getSingleStmt(node.getStmtList().getStmts().get(0));
+                    ASTNode stmt = getSingleStmt(node.getStmtList().getStmts().getFirst());
 
                     IssueBuilder builder = prepareIssueBuilder(stmt).withSeverity(IssueSeverity.LOW);
                     Hint hint = Hint.fromKey(getName());
