@@ -51,11 +51,13 @@ public class MiddleMan extends AbstractIssueFinder {
         Event event = script.getEvent();
         if (event instanceof ReceptionOfMessage receptionOfMessage) {
             List<Stmt> stmts = script.getStmtList().getStmts();
-            if (stmts.size() == 1 && (stmts.get(0) instanceof Broadcast || stmts.get(0) instanceof BroadcastAndWait)) {
+            if (stmts.size() == 1
+                    && (stmts.getFirst() instanceof Broadcast || stmts.getFirst() instanceof BroadcastAndWait)
+            ) {
                 Hint hint = Hint.fromKey(BROADCAST_HINT);
                 String message = ((StringLiteral) (receptionOfMessage.getMsg()).getMessage()).getText();
                 hint.setParameter(Hint.HINT_MESSAGE_MIDDLE, message);
-                Stmt broadcast = stmts.get(0);
+                Stmt broadcast = stmts.getFirst();
                 StringExpr stringExpr;
                 if (broadcast instanceof Broadcast normalBroadcast) {
                     stringExpr = normalBroadcast.getMessage().getMessage();
@@ -77,13 +79,14 @@ public class MiddleMan extends AbstractIssueFinder {
         currentProcedure = node;
         currentScript = null;
         List<Stmt> stmts = node.getStmtList().getStmts();
-        if (stmts.size() == 1 && stmts.get(0) instanceof CallStmt callStmt) {
-            if (!callStmt.getIdent().getName().equals(node.getIdent().getName())) {
-                Hint hint = Hint.fromKey(PROCEDURE_HINT);
-                hint.setParameter(Hint.HINT_BLOCKNAME_MIDDLE, node.getIdent().getName());
-                hint.setParameter(Hint.HINT_BLOCKNAME_FINAL, callStmt.getIdent().getName());
-                addIssue(node, node.getMetadata().getDefinition(), IssueSeverity.MEDIUM, hint);
-            }
+        if (stmts.size() == 1
+                && stmts.getFirst() instanceof CallStmt callStmt
+                && !callStmt.getIdent().getName().equals(node.getIdent().getName())
+        ) {
+            Hint hint = Hint.fromKey(PROCEDURE_HINT);
+            hint.setParameter(Hint.HINT_BLOCKNAME_MIDDLE, node.getIdent().getName());
+            hint.setParameter(Hint.HINT_BLOCKNAME_FINAL, callStmt.getIdent().getName());
+            addIssue(node, node.getMetadata().getDefinition(), IssueSeverity.MEDIUM, hint);
         }
     }
 
