@@ -36,16 +36,16 @@ public class NodeReplacementTest implements JsonTest {
     public void testDeletion() throws IOException, ParsingException {
         Program program = getAST("src/test/fixtures/scratchblocks/motionblocks.json");
 
-        MoveSteps target = (MoveSteps)program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0).getStmtList().getStmts().get(0);
+        MoveSteps target = (MoveSteps)program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst().getStmtList().getStmts().getFirst();
         Stmt replacement = new TurnLeft(target.getSteps(), target.getMetadata());
 
         NodeReplacementVisitor replacementVisitor = new NodeReplacementVisitor(target, replacement);
         Program programCopy = replacementVisitor.apply(program);
 
-        StmtList statements1 = program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0).getStmtList();
-        StmtList statements2 = programCopy.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0).getStmtList();
+        StmtList statements1 = program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst().getStmtList();
+        StmtList statements2 = programCopy.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst().getStmtList();
         assertEquals(statements1.getStmts().size(), statements2.getStmts().size());
-        assertEquals(target, statements1.getStmts().get(0));
-        assertEquals(replacement, statements2.getStmts().get(0));
+        assertEquals(target, statements1.getStmts().getFirst());
+        assertEquals(replacement, statements2.getStmts().getFirst());
     }
 }
